fixes overflow on lumia

--- a/less/navigation.less
+++ b/less/navigation.less
@@ -27,6 +27,10 @@
     -webkit-align-self: center;
     -ms-flex-item-align: center;
     align-self: center;
+
+	@media @tablet {
+    	width: 100%;
+	}
 }
 
 
